...
                },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                singleLine = true,
                isError = viewModel.showAmountError,
                suffix = { Text(text = "₽") },
                label = { Text(text = stringResource(id = R.string.diversification_sum)) },
                modifier = Modifier.fillMaxWidth().testTag("NewDiversificationScreen.AmountField"),
            )
            AnimatedVisibility(visible = viewModel.showAmountError) {
                Text(
                    text = stringResource(id = R.string.validation_invalid_amount, Validation.MaxDiversificationAmountRubles),
                    color = MaterialTheme.colorScheme.error,
                )
...
                        navigator.popBackStack()
                    }
                },
                modifier = Modifier.align(Alignment.End)
                    .let {
                        if (viewModel.isButtonEnabled) {
                            it.testTag("NewDiversificationScreen.CreateButton")
                        } else {
                            it
                        }
                    },
                enabled = viewModel.isButtonEnabled,
            ) {
...
